8303450: [Lilliput/JDK17] Runtime flag to enable Lilliput
Reviewed-by: stuefe